FlambergeWeb/App/style.css
/* ----------------------- */
/* Root                    */
/* ----------------------- */

:root {
    --couleur-principal: #000;
    /*ou #5271ff*/
    --couleur-secondaire: #8bd1ff;
    --principale-sombre: #1e528e;
}

body {
    color: #FFF;
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: #222;
    position: relative;
    min-height: 100vh;
}

#retourHaut {
    z-index: 1;
    display: none;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: var(--couleur-principal);
    color: #fff;
    font-size: 2em;
    border: none;
    border-radius: 5px;
    padding: 5px;
    cursor: pointer;
    text-align: center;
}

#retourHaut:hover {
    background-color: var(--principale-sombre);
}

#retourHaut i {
    width: 100%;
}

/* ----------------------- */
/* Scrollbar               */
/* ----------------------- */
/* width */
::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #222; 
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #8bd1ff; 
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #1e528e; 
}


/* ----------------------- */
/* Header                  */
/* ----------------------- */

header {
    height: 5em;
    background-color: var(--couleur-principal);
    display: flex;
    align-items: center;
    justify-content: space-around;
    border-bottom: var(--couleur-secondaire) solid 1px;
}

header>div {
    display: flex;
}

#logo {
    margin-right: 1em;
    width: 65px;
    height: 65px;
    background: url('./images/logoPrincipal.png') no-repeat center center;
    background-size: cover;
}

#search-bar {
    display: flex;
    align-items: center;
}

#search-bar input {
    height: 2em;
    width: 30em;
    padding: 5px;
    margin-right: 0.2em;
    border-radius: 0.5em;
}

#search-button {
    width: 3em;
    height: 3em;
    background: url('./images/logo_loupe.png') no-repeat center center;
    background-size: 1em;
    border: none;
    border-radius: 5em;
    background-color: #ddd;
    cursor: pointer;
}
 
.suggestionsContainer {
    position: absolute;   
    z-index: 5;
    display: none;
    padding: 5px;
    width: 30em;
    flex-direction: column;
    background-color: #fff;  
    color: #000;
    border-radius: 0.5em;
    border: 2px solid rgb(118, 118, 118);
}

.suggestionsContainer .suggestion{
    display: flex;
    flex-direction: row;
    padding: 5px;
    transition: .2s;
}

.suggestionsContainer img {
    width: 5em;
    height: 5em;
    object-fit: cover;
    margin-right: 1em;
}

.suggestionsContainer div {
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.suggestionsContainer .suggestion {
    cursor: pointer;
}

.suggestionsContainer .suggestion div ~ div {
    justify-content: space-around;
}


nav {
    margin-left: 1em;
    display: flex;
    align-items: stretch;
    height: 100%;
}

nav a {
    text-decoration: none;
    display: flex;
    align-items: stretch;
}

nav div, nav section {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 1em;
    color: #fff;
    transition: background-color 0.3s;
}

nav div:hover, nav section:hover{
    background-color: var(--principale-sombre);
}

.burger-menu {
    display: none;
    cursor: pointer;
}

.bar {
    width: 30px;
    height: 3px;
    background-color: #fff;
    margin: 6px 0;
    transition: 0.4s;
}

@media screen and (max-width: 768px) {
    #search-bar input, .suggestionsContainer {
        width: 15em;
    }

    .burger-menu {
        display: block;
    }

    nav {
        display: none;
        flex-direction: column;
        position: absolute;
        margin-left: 0;
        top: 5em;
        left: 0;
        width: 100%;
        height: auto;
        background-color: var(--couleur-principal);
        z-index: 1;
    }

    nav a {
        width: 100%;
    }

    nav div {
        padding: 1em;
        text-align: center;
        width: 100%;
    }

    nav.show {
        display: flex;
        justify-items: flex-end;
    }
}

/* Recherche */


form {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.result {
    border: none;
    box-shadow: none;
}

.result a {
    text-decoration: none;
    color: #FFF;
    display: block;
    /* Make the link a block element to occupy the full width */
}

.result hr {
    color: var(--couleur-secondaire);
}

.ligneResult {
    display: flex;
    flex-direction: row;
    padding: 1em;
    transition: .2s;
}

.ligneResult a {
    border: none;
    box-shadow: none;
}

.result hr:last-child {
    display: none;
}

.ligneResult img {
    margin: 1em 2em;
    width: 20%;
    height: auto;
    max-width: 100%;
    min-width: 20%;
    object-fit: cover;
    justify-content: space-evenly;
}

@media (max-width: 768px) {
    .ligneResult {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .ligneResult img {
        max-width: 60%;
        min-width: 50%;
    }
}

.real {
    margin-top: 1em;
}

.desc aside {
    display: flex;
    flex-direction: row;
}

.button {
    margin-top: 2em;
    background-color: var(--couleur-principal);
    color: #fff;
    border: none;
    padding: 10px 15px;
    border-radius: 4px;
    cursor: pointer;
    font-size: 14px;
}

.button:hover {
    background-color: var(--principale-sombre);
}

.result a:hover {
    transform: scale(1.02);
}


/* ----------------------- */
/* Footer                  */
/* ----------------------- */

footer {
    z-index: 0;
    height: 6em;
    width: 100%;
    padding-top: 1em;
    background-color: var(--couleur-principal);
    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer a {
    color: var(--couleur-secondaire);
    text-decoration: none;
}
/* ... */

